remove collapse from navbar in mobile

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample04" aria-controls="navbarsExample04" aria-expanded="false" aria-label="Toggle navigation">
                             <span class="navbar-toggler-icon"></span>
                             </button>
-                            <div class="collapse navbar-collapse" id="navbarsExample04">
+                            <div class="navbar-collapse" id="navbarsExample04">
                                 <!-- Original Nav 
                                 <ul class="navbar-nav mr-auto">
                                     <li class="nav-item active">
@@ -99,7 +99,7 @@
                                     <li class="verticalnav-li"><a href="#ElPueblo">El Pueblo</a></li>
                                     <li class="verticalnav-li"><a href="#LaTerraza">La Terraza</a></li>
                                     <li class="verticalnav-li"><a href="#Contacto">Contacto</a></li>
-                                    <li class="verticalnav-li"><a href="#Ubicacion">Ubicación</a></li>
+                                    <li class="verticalnav-li"><a href="#Ubicacin">Ubicación</a></li>
                                 </ul>
                             </div>
                         </nav>
