--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <h1 class="text-shadow mb-4 font-family-h1">Hotel y Restaurante Bicis y Vacas</h1>
         -->
         <div class="anuncio">
-            <h2 class="anuncioTitulo">Noticia</h2>
+            <h2 class="anuncioTitulo">Noticias</h2>
             <br>
             <p class="anuncioTexto">Fiestas del Cristo</p>
             <p class="anuncioTextoSub">14-17 Septiembre </p>
@@ -44,8 +44,8 @@
             <p class="anuncioSeccionBlanca">Contacto</p>
             <p class="anuncioTextoSub"></p>
             <br>
-            <a class="boton-blanco" href="/img/programaFiestas.jpg">Email</a>
-            <a class="boton-blanco" href="/img/programaFiestas.jpg">Teléfono</a>
+            <a class="boton-blanco" href = "mailto: bicisyvacas@gmail.com">Email</a>
+            <a class="boton-blanco" href="tel:+34 696274166">Teléfono</a>
         </div>
 
 
