MarginBottom incrementado logo

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       -->
       <div class="container text-center text-white position-relative z-index-20 pt-lg-5 my-5">
         <p class="h2 font-family-h2 fw-light text-shadow angry-animate">proxima apertura</p>
-        <img class="logoPrincipal" src="assets/logo/bicis_y_vacas-06_noMB.png" alt="Bicis y Vacas">
+        <img class="logoPrincipal mb-4" src="assets/logo/bicis_y_vacas-06_noMB.png" alt="Bicis y Vacas">
         <!--
         <h1 class="text-shadow mb-4 font-family-h1">Hotel y Restaurante Bicis y Vacas</h1>
         -->
