--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         <!--
         <h1 class="text-shadow mb-4 font-family-h1">Hotel y Restaurante Bicis y Vacas</h1>
         -->
+        <div class="cards-viewport">
         <div class="anuncio">
             <h2 class="anuncioTitulo">Noticias</h2>
             <br>
@@ -47,6 +48,7 @@
             <a class="boton-blanco" href = "mailto: bicisyvacas@gmail.com">Email</a>
             <a class="boton-blanco" href="tel:+34 696274166">Teléfono</a>
         </div>
+      </div>
 
 
         <!--
