--- a/index.html
+++ b/index.html
@@ -36,10 +36,11 @@
 <body class="main-layout">
     <div class="hero-home">
         <div class="container hero w-container">
-            <div class="hero-content"><img src="assets/logo/bicis_y_vacas-defaultSize.png" loading="lazy" width="200" alt="" class="image-3">
+            <div class="hero-content">
+                <img src="assets/logo/bicis_y_vacas-15.png" loading="lazy" width="300" alt="" class="image-3">
                 <div class="hero-menu">
                     <a href="#Habitaciones" class="hero-menu-link">Habitaciones - Reservas</a>
-                    <a href="#Restaurante" class="hero-menu-link">Tamba Restaurante</a>
+                    <a href="#Restaurante" class="hero-menu-link">Restauración</a>
                     <a href="#DesayunosTop" class="hero-menu-link">Desayunos Especiales</a>
                     <a href="#LaTerraza" class="hero-menu-link">La Terraza</a>
                     <a href="#ElPueblo" class="hero-menu-link">El Pueblo - Experiencias</a>
@@ -219,12 +220,12 @@
                 <div class="col-md-7 padding_right0">
                     <div class="max_width">
                         <div class="titlepage">
-                            <h2>Restaurante</h2>
+                            <h2>Restauración</h2>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
                                 ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
                                 ullamco laboris nisi ut aliquip ex ea commodo consequat.
                                 Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore</p>
-                            <a class="read_more" href="#">Ver Menú</a>
+                            <a class="read_more" href="#">Carta Tamba</a>
                         </div>
                     </div>
                 </div>
@@ -233,83 +234,24 @@
     </div>
     <!-- end Restaurante section -->
     <!-- start Desayunos Top section -->
-    <div class="glasses" id="DesayunosTop">
+    <div class="about" id="DesayunosTop">
         <div class="container">
-            <div class="row">
-                <div class="col-md-10 offset-md-1">
+            <div class="row d_flex">
+                <div class="col-md-7">
                     <div class="titlepage">
-                        <h2>Desayunos Especiales</h2>
+                        <h2>Desayunos Top</h2>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                            labor e et dolore magna aliqua. Ut enim ad minim veniam, qui
-                        </p>
+                            labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                            laboris nisi ut</p>
                     </div>
+                    <a class="read_more" href="#">Cartas Desayunos</a>
                 </div>
-            </div>
-        </div>
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-xl-3 col-lg-3 col-md-6 col-sm-6">
-                    <div class="glasses_box">
-                        <figure><img src="images/glass1.png" alt="#" /></figure>
-                        <h3><span class="blu">€</span>10</h3>
-                        <p>Plato 1</p>
-                    </div>
-                </div>
-                <div class="col-xl-3 col-lg-3 col-md-6 col-sm-6">
-                    <div class="glasses_box">
-                        <figure><img src="images/glass2.png" alt="#" /></figure>
-                        <h3><span class="blu">€</span>10</h3>
-                        <p>Plato 2</p>
-                    </div>
-                </div>
-                <div class="col-xl-3 col-lg-3 col-md-6 col-sm-6">
-                    <div class="glasses_box">
-                        <figure><img src="images/glass3.png" alt="#" /></figure>
-                        <h3><span class="blu">€</span>10</h3>
-                        <p>Plato 3</p>
+                <div class="col-md-5">
+                    <div class="about_img">
+                        <figure><img src="images/about_img.png" alt="#" /></figure>
                     </div>
                 </div>
 
-                <div class="col-xl-3 col-lg-3 col-md-6 col-sm-6">
-                    <div class="glasses_box">
-                        <figure><img src="images/glass4.png" alt="#" /></figure>
-                        <h3><span class="blu">€</span>10</h3>
-                        <p>Plato 4</p>
-                    </div>
-                </div>
-                <!--
-                <div class="col-xl-3 col-lg-3 col-md-6 col-sm-6">
-                    <div class="glasses_box">
-                        <figure><img src="images/glass5.png" alt="#" /></figure>
-                        <h3><span class="blu">$</span>50</h3>
-                        <p>Sunglasses</p>
-                    </div>
-                </div>
-                <div class="col-xl-3 col-lg-3 col-md-6 col-sm-6">
-                    <div class="glasses_box">
-                        <figure><img src="images/glass6.png" alt="#" /></figure>
-                        <h3><span class="blu">$</span>50</h3>
-                        <p>Sunglasses</p>
-                    </div>
-                </div>
-                <div class="col-xl-3 col-lg-3 col-md-6 col-sm-6">
-                    <div class="glasses_box">
-                        <figure><img src="images/glass7.png" alt="#" /></figure>
-                        <h3><span class="blu">$</span>50</h3>
-                        <p>Sunglasses</p>
-                    </div>
-                </div>
-                <div class="col-xl-3 col-lg-3 col-md-6 col-sm-6">
-                    <div class="glasses_box">
-                        <figure><img src="images/glass8.png" alt="#" /></figure>
-                        <h3><span class="blu">$</span>50</h3>
-                        <p>Sunglasses</p>
-                    </div>
-                </div>
-                -->
-                <div class="col-md-12">
-                    <a class="read_more" href="#">Ver Desayunos</a>
-                </div>
             </div>
         </div>
     </div>
@@ -331,7 +273,7 @@
                                 ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
                                 ullamco laboris nisi ut aliquip ex ea commodo consequat.
                                 Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore</p>
-                            <a class="read_more" href="#">Ver El Pueblo</a>
+                            <a class="read_more" href="#">Experiencias</a>
                         </div>
                     </div>
                 </div>
@@ -339,7 +281,7 @@
         </div>
     </div>
     <!-- end El Pueblo section -->
-    <!-- start La Terraza section -->
+    <!-- start La Terraza section 
     <div class="about" id="LaTerraza">
         <div class="container">
             <div class="row d_flex">
@@ -360,6 +302,7 @@
             </div>
         </div>
     </div>
+    -->
     <!-- end El Pueblo Section section -->
     <!-- start Testimonios section
     <div class="clients">
