--- a/index.html
+++ b/index.html
@@ -237,6 +237,12 @@
     <div class="about" id="DesayunosTop">
         <div class="container">
             <div class="row d_flex">
+                <div class="col-md-5">
+                    <div class="about_img">
+                        <figure><img src="images/desayunos.jpg" alt="#" /></figure>
+                    </div>
+                </div>
+
                 <div class="col-md-7">
                     <div class="titlepage">
                         <h2>Desayunos Top</h2>
@@ -246,12 +252,6 @@
                     </div>
                     <a class="read_more" href="#">Cartas Desayunos</a>
                 </div>
-                <div class="col-md-5">
-                    <div class="about_img">
-                        <figure><img src="images/about_img.png" alt="#" /></figure>
-                    </div>
-                </div>
-
             </div>
         </div>
     </div>
