Subir Brillo Fondo

--- a/index.html
+++ b/index.html
@@ -482,8 +482,11 @@
     <footer>
         <div class="footer">
             <div class="container">
-                <div class="row">
-                    <div class="col-md-8 offset-md-2">
+                <div class="row justify-content-center">
+                    <div class="col-2">
+                        <img src="assets/logo/bicis_y_vacas-16.png" loading="lazy" width="300" alt="" class="image-3">
+                    </div>
+                    <div class="col-8">
                         <ul class="location_icon">
                             <li><a href="#"><i class="fa fa-map-marker" aria-hidden="true"></i></a><br>La Pola de Gordón
                             </li>
